refactor: simplify filter and sort models, improve validation and deserialization
- Remove redundant constructors and validation logic from FilterCriteria, introduce static validatedBuilder for consistent validation
- Update FilterNode to use unmodifiable child lists and enhance group node validation
- Simplify PagedRequest by removing SortNormalizer dependency and clarifying sort handling
- Streamline QueryResult by removing unnecessary method overrides and comments
- Refactor SortCriteria to a record, add custom deserializer for default direction handling and validation